@@ -3,7 +3,7 @@ useDynLib(utils, .registration = TRUE, .fixes = "C_")
 
 export("?", .DollarNames, .S3methods, .romans, CRAN.packages, Rprof,
        Rprofmem, RShowDoc, RSiteSearch, URLdecode, URLencode, View,
-       adist, alarm, apropos, aregexec, argsAnywhere,
+       adist, alarm, apropos, aregexec, argsAnywhere, askYesNo,
        assignInMyNamespace, assignInNamespace, as.roman, as.person,
        as.personList, as.relistable, aspell, aspell_package_C_files,
        aspell_package_R_files, aspell_package_Rd_files,
